<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/string_metadata"
	        android:textSize="20dp" />
	
	    <EditText
	        android:id="@+id/editTextMetaDataName"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:ems="10"
	        android:hint="@string/meta_name"
	        android:inputType="text" />
	
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp" >
	
	        <TextView
	            android:id="@+id/label_info3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/element_value_fields"
	            android:textSize="20dp" />
	
	    </LinearLayout>
	    
	    <LinearLayout
	        android:id="@+id/linearLayoutForMetadataValueFields"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:orientation="vertical" >
	
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_marginRight="10dp"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/removeElementValueFields"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="5dp"
	            android:text="@string/remove"
	            android:textSize="20dp" />
	
	        <View
	            android:layout_width="2dp"
	            android:layout_height="match_parent"
	            android:background="#dddddd" />
	
	        <TextView
	            android:id="@+id/addElementValueFields"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:text="@string/add"
	            android:textSize="20dp" />
	
	    </LinearLayout>
	
	    <RadioGroup
	        android:id="@+id/radioGroupType"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:gravity="center_horizontal"
	        android:orientation="horizontal" >
	
	        <RadioButton
	            android:id="@+id/rbSingleValue"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/single_value" />
	
	        <RadioButton
	            android:id="@+id/rbMultiValue"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:checked="true"
	            android:text="@string/multi_value" />

	    </RadioGroup>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_marginTop="50dp"
	        android:gravity="center" >
	
	        <Button
	            android:id="@+id/button1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/string_delete"
	            android:visibility="gone" />
	
	        <Button
	            android:id="@+id/button2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:onClick="saveMetadata"
	            android:text="@string/save" />
	
	    </LinearLayout>
    </LinearLayout>
</ScrollView>
