<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <Spinner
            android:id="@+id/metaDataSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center" />

        <LinearLayout
            android:id="@+id/linearLayoutForMetadataValueFields"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>

        <RadioGroup
            android:id="@+id/rgMetaList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/rbNone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/none" >

                </RadioButton>

                <RadioButton
                    android:id="@+id/rbStandard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:checked="true"
                    android:text="@string/standard" >

                </RadioButton>

                <RadioButton
                    android:id="@+id/rbVendor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vendor" >
                </RadioButton>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/sIdentifier1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/etIdentifier1"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/sIdentifier2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/etIdentifier2"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text" >
            </EditText>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/lifetime"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/rgLifetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rbSession"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/lifetime_session" />

            <RadioButton
                android:id="@+id/rbForever"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/lifetime_forever" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/bPublishDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="publish"
                android:text="@string/string_delete" />

            <Button
                android:id="@+id/bPublishNotify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="publish"
                android:text="@string/string_notify" />

            <Button
                android:id="@+id/bPublishUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="publish"
                android:text="@string/string_update" />

            <Button
                android:id="@+id/buttonSave"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="publishSave"
                android:text="@string/save" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Für den TestPDP" />

            <Button
                android:id="@+id/buttonTestDelete"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="publishTest"
                android:text="@string/string_delete" />

            <Button
                android:id="@+id/buttonTestUpdate"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="publishTest"
                android:text="@string/string_update" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>